# gold-price-prediction

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: data-pipeline.yml  deployment.yml  train-pipeline.yml
data/: current_data.csv  reference_data.csv  test.csv  train.csv
data/merged/: .gitignore  EUR-merged-gold-price-data.csv.dvc
data/processed/: .gitignore  AUD-processed-gold-price-data.csv  CAD-processed-gold-price-data.csv  CHF-processed-gold-price-data.csv  EUR-processed-gold-price-data.csv  EUR-processed-gold-price-data.csv.dvc  GBP-processed-gold-price-data.csv  USD-processed-gold-price-data.csv
data/raw/: .gitignore  AUD-gold-price-data.csv  AUD-gold-price-data.csv.dvc  CAD-gold-price-data.csv  CAD-gold-price-data.csv.dvc  CHF-gold-price-data.csv  CHF-gold-price-data.csv.dvc  EUR-gold-price-data.csv  EUR-gold-price-data.csv.dvc  GBP-gold-price-data.csv  GBP-gold-price-data.csv.dvc  USD-gold-price-data.csv  USD-gold-price-data.csv.dvc  aggregated_sentiments.csv.dvc
gx/: great_expectations.yml
gx/checkpoints/: merge_checkpoint.yml
gx/expectations/: .ge_store_backend_id  merge_suite.json
gx/uncommitted/: config_variables.yml  datasource_new.ipynb  edit_checkpoint_merge_checkpoint.ipynb  (+1 more)
models/: EUR_linear_regression_model.pkl  gold_price_prediction_model.onnx  gold_price_prediction_model.pkl  gold_price_prediction_model.quant.onnx
reports/: metrics.txt  test_metrics.txt  test_metrics_copy.txt  test_results.json  train_metrics.txt  train_metrics_copy.txt  validation_report.txt
tests/: test_api.py
(+43 files in other folders)
