[tool.poetry]
name = "gold-price-prediction"
version = "0.1.0"
description = "Predictions of price of gold"
authors = ["Tanja <tanja.grozdani@student.um.si>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
requests = "^2.31.0"
joblib = "^1.3.2"
flask = "^3.0.0"
pandas = "^2.0.0"
numpy = "^1.26.2"
scikit-learn= "^1.2.2"
keras = "^2.15.0"
mlflow = "^2.13.0"
tensorflow-io-gcs-filesystem = "^0.30.0"
unidecode = "^1.3.8"
dagshub = "^0.3.27"
great-expectations = "^0.18.14"
evidently = "^0.4.24"
flask-cors = "^4.0.0"
prophet = "^1.1.5"
dvc = "^3.51.0"
dvc-s3 = "^3.2.0"
matplotlib = "^3.9.0"
transformers = "^4.41.1"
datasets = "^2.19.1"
torch = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
